--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -28,7 +28,6 @@ body {
 
 header {
   width: 100%;
-  height: var(--height-header);
   margin: var(--margin-default);
   display: flex;
   flex-wrap: wrap;
@@ -39,10 +38,13 @@ header {
   margin-block: 2rem;
 }
 
+.logo-mobile {
+  margin-block: 1.2rem;
+}
+
 nav {
   width: 100%;
   height: 4.4rem;
-  padding-inline: 12rem;
   display: flex;
   border-block: 1px solid #000;
   background-color: #efefef;
@@ -52,7 +54,6 @@ main {
   width: 100%;
   min-height: var(--height-main);
   margin: var(--margin-default);
-  padding-inline: 12rem;
   display: flex;
   flex-wrap: wrap;
   gap: 0.8rem;
@@ -61,16 +62,39 @@ main {
 .main-news,
 .sport-news,
 .globo-news {
-  height: 100%;
+  min-height: var(--height-main);
   display: flex;
   background-color: #efefef;
 }
 
 .main-news {
-  flex: 2 0 60rem;
+  min-width: 61rem;
+  flex-grow: 2;
 }
 
 .sport-news,
 .globo-news {
-  flex: 1 0 30rem;
+  min-width: 31rem;
+  flex-grow: 1;
+}
+
+@media only screen and (min-width: 1503px) {
+  nav,
+  main {
+    padding-inline: 10%;
+  }
+}
+
+@media only screen and (max-width: 1261px) {
+  .main-news {
+    min-width: 100%;
+    min-height: calc(var(--height-main) - 100px);
+  }
+}
+
+@media only screen and (max-width: 310px) {
+  .sport-news,
+  .globo-news {
+    min-width: 100%;
+  }
 }
