--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,9 +7,9 @@
 }
 
 :root {
-  --font-bold: 700;
-  --font-semibold: 500;
-  --font-regular: 400;
+  --font-size-small: 1.4rem;
+  --font-size-medium: 2rem;
+  --semibold: 500;
   --margin-default: 0.8rem;
   --height-header: 12rem;
   --height-main: calc(
@@ -48,15 +48,18 @@ header {
 }
 
 .logo-desktop {
+  width: 17.2rem;
   margin-block: 2rem;
 }
 
+.display-mobile,
 .logo-mobile,
 .menu-mobile {
   display: none;
 }
 
 .logo-mobile {
+  width: 20.8rem;
   margin-block: 1.2rem;
 }
 
@@ -80,8 +83,8 @@ a {
 }
 
 nav a {
-  font-size: 2rem;
-  font-weight: var(--font-bold);
+  font-size: var(--font-size-medium);
+  font-weight: bold;
 }
 
 .menu-desktop,
@@ -97,20 +100,16 @@ main {
   max-width: 1280px;
   margin: calc(var(--height-header) + var(--margin-default))
     var(--margin-default) var(--margin-default);
-  gap: var(--margin-default);
-}
-
-.main-news,
-.sport-news,
-.globo-news {
-  font-size: 2rem;
-  padding: var(--margin-default);
+  gap: calc(3 * var(--margin-default));
 }
 
 .main-news {
   flex-direction: column;
-  gap: 2.4rem;
-  flex: 2 0 62.4rem;
+  gap: calc(2 * var(--margin-default));
+  flex: 2 0 61.6rem;
+}
+h2 {
+  font-weight: normal;
 }
 
 h2:hover {
@@ -119,15 +118,14 @@ h2:hover {
 
 .headline h2 {
   font-size: min(8vw, 5.2rem);
-  font-weight: var(--font-bold);
+  font-weight: bold;
   line-height: 1.6;
   color: #c4160c;
-  margin-bottom: 1.6rem;
 }
 
 .highlight h2 {
-  font-size: 1.6rem;
-  font-weight: var(--font-semibold);
+  font-size: var(--font-size-small);
+  font-weight: var(--semibold);
   color: #303134;
 }
 
@@ -136,19 +134,56 @@ hr {
   border-color: #f5f6f740;
 }
 
+main img {
+  border-radius: 1.2rem;
+  object-fit: cover;
+}
+
+.top-news {
+  display: flex;
+  gap: calc(3 * var(--margin-default));
+}
+
+.news-subject,
+.news-subtitle {
+  font-size: var(--font-size-small);
+  color: #2f3134;
+}
+
+.news-subject {
+  margin-top: var(--margin-default);
+  font-weight: var(--semibold);
+  color: #c4170c;
+}
+
+.news-title {
+  display: inline-block;
+  margin-block: var(--margin-default);
+  font-size: var(--font-size-medium);
+  font-weight: bold;
+  color: #2f3134;
+}
+
+.news-subtitle {
+  font-weight: var(--semibold);
+}
+
 .sport-news,
 .globo-news {
-  flex: 1 0 31.2rem;
+  flex: 1 0 30.8rem;
   background-color: #efefef;
 }
 
-@media only screen and (max-width: 1279px) {
-  .main-news {
-    flex-basis: 100%;
-  }
+footer {
+  height: calc(0.5 * var(--height-header));
+  display: flex;
+  flex-basis: 100%;
+  align-items: end;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 768px) {
+  .display-mobile,
   .logo-mobile,
   .menu-mobile {
     display: flex;
@@ -161,14 +196,43 @@ hr {
   }
 
   .main-news {
-    gap: 1.6rem
+    gap: 1.6rem;
   }
 
   .highlight h2 {
     font-weight: var(--font-bold);
-    color: #CD150B;
+    color: #cd150b;
   }
 
+  img {
+    width: min(12rem, 100%);
+  }
+
+  .top-news {
+    flex-direction: column;
+  }
+
+  .top-news article {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: calc(2 * var(--margin-default));
+  }
+
+  .top-news img,
+  .top-news .news-title {
+    flex: 1 0 33%;
+  }
+
+  .top-news h2 {
+    color: #cd150b;
+  }
+
+  .top-news .news-subtitle {
+    margin-bottom: calc(2 * var(--margin-default));
+  }
+
+  .main-news,
   .sport-news,
   .globo-news {
     flex-basis: 100%;
